# Music-Player

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  fresh_cmake.sh
include/core/: player.h
include/utils/: debug.h
src/: main.cpp
src/core/: player.cpp
src/utils/: debug.cpp
